# ChangeLog for media-sound/orpheus
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/orpheus/ChangeLog,v 1.29 2012/10/07 10:19:13 ago Exp $

  07 Oct 2012; Agostino Sarubbo <ago@gentoo.org> orpheus-1.6-r2.ebuild:
  Stable for amd64, wrt bug #424962

  07 Oct 2012; Agostino Sarubbo <ago@gentoo.org> orpheus-1.6-r2.ebuild:
  Eapi4, respect AR

*orpheus-1.6-r2 (26 Feb 2011)

  26 Feb 2011; Alexis Ballier <aballier@gentoo.org> +orpheus-1.6-r2.ebuild,
  +files/orpheus-1.6-bufsize.patch, +files/orpheus-1.6-constify.patch,
  +files/orpheus-1.6-cppflags.patch:
  Make it build with latest autotools, fix an automake warning, fix a buffer
  overflow (bug #339242), fix some char* vs const char* warnings.

  03 Dec 2010; Diego E. Pettenò <flameeyes@gentoo.org> orpheus-1.6-r1.ebuild,
  files/orpheus-1.6-nolibghttp.patch:
  Upgrade to automake 1.9 at least, drop libghttp check pre-rebuild. Do a
  recursive rebuild.

  10 May 2009; Samuli Suominen <ssuominen@gentoo.org>
  -files/1.5-gcc34.patch, -orpheus-1.5.ebuild,
  -files/orpheus-1.5-nolibghttp.patch, -orpheus-1.6.ebuild,
  orpheus-1.6-r1.ebuild:
  Remove deprecated libghttp support wrt #244128

  08 Nov 2007; Raúl Porcel <armin76@gentoo.org> orpheus-1.6-r1.ebuild:
  alpha/sparc stable wrt security #113683, thanks to Tobias Klausmann and Alex
  Maclean for testing

  07 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  orpheus-1.6-r1.ebuild:
  stable x86, security bug 113683

*orpheus-1.6-r1 (06 Nov 2007)

  06 Nov 2007; Samuli Suominen <ssuominen@gentoo.org>
  +files/101_fix-buffer-overflow.diff, +orpheus-1.6-r1.ebuild:
  Fix security bug 113683, CVE-2005-3863, a stack-based buffer overflow in
  kkstrtext.h in ktools library and stabilize amd64.

  29 Nov 2006; Alexis Ballier <aballier@gentoo.org> orpheus-1.5.ebuild,
  orpheus-1.6.ebuild:
  Adding a cddb useflag that depends on libghttp

*orpheus-1.6 (25 Nov 2006)
