@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX 1.5-amd64.patch 962 SHA256 cd0c12aebe6909dceba04b6db0741fa997bf86f2501cbed3fccf070c9802395a SHA512 8acf3a971620efd0d9cb5a93aa313458dcbfed4b3cbd7ddfb84d63911281081d98a25d17443031489d2f8954e829ae6218b8911090efca9971e6e273fbafac65 WHIRLPOOL b3392f3649a8dc823d95c1ed0b29f729162ab3b43f6d033396e917d77454ef528785fefa8694dca6070a75d3b7451634029b04eeedfc9930d106a0fcf0331e3f
 AUX 101_fix-buffer-overflow.diff 614 SHA256 f6c2ee9d2e53b079764b40e85678b8d23664d86432c14cedf0246112c59f2501 SHA512 403701d1a4815f28f782311f80ca3db3527107a8d558baa8ee991d794d5439ef5e3f28f41f155ffb4140fd39eed30d135c50a6a4af809317f541d02281600611 WHIRLPOOL 01d5b611555cbc198e61530d1d6ed6afc1ee3cbc36b1a9380ff730f9367be2a6e476713cd92bd211299af0ec205483cbb52734541aa347765f5ec4cd13b551b2
 AUX orpheus-1.6-bufsize.patch 590 SHA256 d5aef82370efca028deee08176494bb926a0239f56322815eed22b3b5c44ed8a SHA512 47e166074a585657bf49c7b3af33c2849dacbc737872ee6abd70891fddd7e8c63cf293e1180cd0f04077dcd6def495203103e92ca78a87564dcec56c0ea2f4e3 WHIRLPOOL 92499f8f9b74cdcc011ca11d19d62074c372611df08772d4e1f2728fc269c625fd3a371c5889d596b7cc9360547dff2b6ba229fd8d87eab1e1fd02583309f18a
@@ -5,7 +8,14 @@ AUX orpheus-1.6-constify.patch 2123 SHA256 db6a5fea1765c72edaf173293cc4325d90520
 AUX orpheus-1.6-cppflags.patch 830 SHA256 0e2750cc1cd492273a0b9b77b6e006b96bfa8534770b8ffd1b0aa409be495bff SHA512 4a8d51eb3ef9cadfa78c0d11ae264166589dc0a63f084f904bb7a698fda6aa570cfb940b3ad50b0fbff201d21df049369d92b7ed5452cff473ee2d7b60fda43f WHIRLPOOL 68c1846933600d11f7238afb37ae184a25f92eec92c6a4ceca975c0a482ad0c78bfea245adf129641e5f584c6dd277d7786aed728e84caef2c883637bb8eeb7b
 AUX orpheus-1.6-nolibghttp.patch 731 SHA256 7162d95a07ec1ce1c4109befeaf704817a46d3036c17990f10a5600deebef5e0 SHA512 0757f7451fe0ce1d84e4ed710537daac09fff4ffbc14b9fa397cc00bf0c04ed8ad27785917d327ccd69efac10840b534f6379b2f3b020b9d1713fd801e13806b WHIRLPOOL 423f51857b2120ec6f6007de5ff0d90707b82689c3e573670498174765ce6e565745fac7d08df807be4d1375e3b80327bac10d2e7b8f3046f0722420dd772819
 DIST orpheus-1.6.tar.gz 440553 SHA256 18a6a4b0171c8a2a5a09be6e2cd8fc781c145fde1b266e43a9902fef10ee6ff5 SHA512 40f4ac7533449940370f29d4a14281d7f235ce711166e0e979f3e2a5ca37f792dc74b5267ee2a4f51af6c20f346c543d0d9f1fc88f47670971ad32f7c2856abb WHIRLPOOL 4c166cdc42315a6981d730de3ad62b6d36b9953c6d7ee7c02c7ea21fbae885a9ff1286902644e9c7410675ab64f026ed987ff3b56c15ffb270ea65738df6c7fe
-EBUILD orpheus-1.6-r1.ebuild 1167 SHA256 d416a8d1273a3232c7807b283a382c9790e416e209d73b4561e412987bdbeea5 SHA512 7e3443fef5fab1772acb915b33e118cdec8f673eae6dee94b5f675d1904719b5c3704eafc0b41c226ea308da8194aa043fabdc32a0ee3b7863270f7a6d7dc3e1 WHIRLPOOL 4d928c68168ad9b3544d458aeed7e604aa4242d80dacb6c4d665c231b3d7a8576820d18bd1474796ed02bc9aba9ef95a8a57224494860f12b9c4138a55d46233
-EBUILD orpheus-1.6-r2.ebuild 1320 SHA256 91ba9cb63ff0bb08253d79d3c9e91f6692d0561a521e287a8f288c9604399b7d SHA512 44879facef532f62f47f0fa409c7ef6b17b20b175fa521aa3d0fe6be659ea0fb403a17d6be4b4b2543d02b2b1e92882c81473e8f6a752d44ad7f6b42204da68b WHIRLPOOL 0db9f4616dc29d2f78e5021f1d7ad4cc5e8f4971fea37dffddf51ed067f2dbd6d48cb8be80d1bbbc58a28d3834db93c3ccdcec73882cbf526b427ebec790aa75
-MISC ChangeLog 4505 SHA256 b3fe5b07c21f7bf08f5f4cba3b79f3dfdf8db33d6b9a8689e2f3c18b24d71f52 SHA512 486f3edacb9e712c432ca9ff69b2a1e44f3a9ab04f0a7ade5d0265023fd82f8ff00b3fb7292d8c2ad3ff1ad45866145c8425f72435e1dc34cd6b432f8c8f6d93 WHIRLPOOL 4f74276b538a5fdb302f98e8eb2840683092d79e5f37d64c8595cac8cdd0fd39edf3ed3beae9157177e261ef8412a5549c43168233cc7226ceba95ae6e9903d8
+EBUILD orpheus-1.6-r1.ebuild 1153 SHA256 8855fa90734139155ee19a9b621f419da8af69fd11ad5751bf9efd41d3bd4540 SHA512 cf79f07aca4d75871ea90fd8be12de36f6b67dec6865f8e3124f23c549bcebdab72d900526429a7fc8fdbdc529e72e716e42d581d7eefd6fdf5ae22d11a8b33b WHIRLPOOL c6152dcddc3d9ed93e29194b8188287a41693557e503567fceb9367fdc5352f92679de74a8d46f712021f4755b4ca314282d612b6880ed3ca64ede5815fa0d0a
+EBUILD orpheus-1.6-r2.ebuild 1310 SHA256 3a1cb9d9c71e1155b00f27a308ae2a2e2183a7f75fa4cbacd28c2bdaa8460749 SHA512 f11624322ad60550ed8c83e8c57c5193edb7716442a5adcc42c82f94ad27f099b8d8781651713cc1c577a713e07dcee16fc0fb6a51ae7a653bf88e0a0018c736 WHIRLPOOL 5a50a0d5eb8579b39cbbe2fecd2a315b413143de3f982ddc307ca6e684138f90fa809f04347fb6f2063c93d3b21996f9bd2cc0569df1179cbcecba3624e8939b
+MISC ChangeLog 4635 SHA256 a79cf808e358d54989cc79a9bec091602c422e736a3ab27199338654137d72a1 SHA512 88bb203ba70ec31dbdc4da364dc8d430d4ce14fde34e7100dcd7f2ae0a2be973a7276a8c65fd1dadb2bdb09fc6422a8cc1a4c4f659f9f44113a4267c35d6e55a WHIRLPOOL 38731a5f6065527a38faa36aa93ab2d7f14cdb3bed665b89129a5a58c1462418db302ce1dbd82cd64ce9242a4b7a0ceb994e69cbf5c17fc407c1d7303fae2089
 MISC metadata.xml 159 SHA256 eb5b8cfa9aed067cd72d6439beac2dd0abdba30248f27e4b337012b493a18369 SHA512 a77b80f2ab1799aab052edd575ad80daae01c717af7bd5bf3dcda15714b9afd2e9fd6553cc20b000bc3157915b7082641a92fda56de3a9b8362ae2488925e4b1 WHIRLPOOL 913c53cb00341537eff621357b1c5b8379bb63df52d18b88fdef0173cdfd7c60f6d1ece1d42b5d0fcda69ed73ab4138f4268c6394851b07a9411a8306fef9173
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlBxow8ACgkQuQc30/atMkBoogCbB2txsgqM1mzQ3lgFOpI39fi3
+DEoAn1frvc2XUKP6jaA9Kx8zG4ZVBK3R
+=VUCn
+-----END PGP SIGNATURE-----
