@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/orpheus
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/orpheus/ChangeLog,v 1.29 2012/10/07 10:19:13 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/orpheus/ChangeLog,v 1.30 2012/10/07 15:43:09 armin76 Exp $
+
+  07 Oct 2012; Raúl Porcel <armin76@gentoo.org> orpheus-1.6-r1.ebuild,
+  orpheus-1.6-r2.ebuild:
+  Drop alpha/sparc keywords
 
   07 Oct 2012; Agostino Sarubbo <ago@gentoo.org> orpheus-1.6-r2.ebuild:
   Stable for amd64, wrt bug #424962
